Se ha programado que en los pedidos aparezca el total de kilos contra el estándar

--- a/oferta.html
+++ b/oferta.html
@@ -48,7 +48,7 @@
       <span class="navbar-text material-icons" data-toggle="tooltip" data-placement="bottom" title="Volver al panel">dvr</span>
     </a>
     <a class="navbar-brand" href="ofertas.html">
-      <div data-toggle="tooltip" data-placement="bottom" title="Estadísticas">
+      <div data-toggle="tooltip" data-placement="bottom" title="Ofertas">
         <span class="fas fa-percent"></span>
       </div>
     </a>
