Corregidos bugs en existencias

--- a/ofertas.html
+++ b/ofertas.html
@@ -284,24 +284,26 @@
                   </ul>
                   <div class="tab-content" id="pills-tabContent">
                     <div class="tab-pane fade show active" id="ofertasActivas" role="tabpanel" aria-labelledby="ofertasActivas">
-                      <table id="tablaOfertasActivas" cellspacing="0" width="100%" class="table table-sm table-bordered table-striped table-hover">
-                        <thead>
-                          <tr>
-                            <th>Id</th>
-                            <th>Clave</th>
-                            <th>Consorcio</th>
-                            <th>Tiendas</th>
-                            <th class="text-center">Cantidad productos</th>
-                            <th>Fecha inicio</th>
-                            <th>Fecha fin</th>
-                            <th class="text-center">Detalles</th>
-                            <th class="text-center">Finalizar</th>
-                          </tr>
-                        </thead>
-                        <tbody>
-
-                        </tbody>
-                      </table>
+                      <div class="table-responsive">
+                        <table id="tablaOfertasActivas" cellspacing="0" width="100%" class="table table-sm table-bordered table-striped table-hover">
+                          <thead>
+                            <tr>
+                              <th>Id</th>
+                              <th>Clave</th>
+                              <th>Consorcio</th>
+                              <th>Tiendas</th>
+                              <th class="text-center">Cantidad productos</th>
+                              <th>Fecha inicio</th>
+                              <th>Fecha fin</th>
+                              <th class="text-center">Detalles</th>
+                              <th class="text-center">Finalizar</th>
+                            </tr>
+                          </thead>
+                          <tbody>
+  
+                          </tbody>
+                        </table>
+                      </div>
                     </div>
                     <div class="tab-pane fade" id="ofertasInactivas" role="tabpanel" aria-labelledby="pillofertasInactivas">
                       <table id="tablaOfertasInactivas" cellspacing="0" width="100%" class="table table-sm table-bordered table-striped table-hover">
