--- a/panel.html
+++ b/panel.html
@@ -53,6 +53,11 @@
           <span class="fas fa-percent"></span>
         </div>
       </a>
+      <a class="navbar-brand" href="existencias.html">
+        <div data-toggle="tooltip" data-placement="bottom" title="Existencias">
+          <span class="fas fa-list-ul"></span>
+        </div>
+      </a>
       <a class="navbar-brand" href="estadisticas.html">
         <div data-toggle="tooltip" data-placement="bottom" title="Estadísticas">
           <span class="fas fa-chart-line"></span>
