Se le ha añadido la funcionalidad de imprimir en excel los pedidos, las ventas diarias y las existencias

--- a/administrar.html
+++ b/administrar.html
@@ -109,6 +109,18 @@
                   </div>
                 </a>
               </div>
+              <div class="col-lg-2 col-md-3 col-sm-6">
+                <a href="precios.html" class="enlace-admin">
+                  <div class="card tarjeta tarjeta">
+                    <img class="card-img-top" height="150px" style="border-bottom: solid 1px rgb(0, 0,0, .125);" src="img/precios.png" alt="Card image cap">
+                    <div class="card-body">
+                      <h5 class="card-title">Precios</h5>
+                      <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <a href="#" class="btn btn-primary">Go somewhere</a> -->
+                    </div>
+                  </div>
+                </a>
+              </div>
             </div>
           </div>
         </div>
