--- a/panel.html
+++ b/panel.html
@@ -63,6 +63,11 @@
           <span class="fas fa-chart-line"></span>
         </div>
       </a>
+      <a class="navbar-brand" href="ventasDiarias.html">
+        <div data-toggle="tooltip" data-placement="bottom" title="Ventas diarias">
+          <span class="fas fa-calendar-check"></span>
+        </div>
+      </a>
       <a class="navbar-brand" href="pedidosMateriales.html">
         <div data-toggle="tooltip" data-placement="bottom" title="Pedidos de materiales">
           <span class="fas fa-box-open"></span>
