--- a/panel.html
+++ b/panel.html
@@ -73,9 +73,9 @@
           <span class="fas fa-box-open"></span>
         </div>
       </a>
-      <a class="navbar-brand" href="chequeosPrecios.html">
+      <a class="navbar-brand" href="chequeos.html">
         <div data-toggle="tooltip" data-placement="bottom" title="Chequeos de precios">
-          <span class="fas fa-money-bill-wave"></span>
+          <span class="fas fa-clipboard-check"></span>
         </div>
       </a>
       <div id="campana" onclick="mostrarNotificaciones()" class="navbar-brand dropdown" data-toggle="tooltip" data-placement="bottom" title="Notificaciones">
