--- a/precios.html
+++ b/precios.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="css/bootstrap-datepicker3.standalone.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="css/buttons.bootstrap4.min.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <link href="https://unpkg.com/vue2-datatable-component/dist/min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/bootstrap-multiselect.css">
     <style>
@@ -93,7 +94,8 @@
                       <th>Consorcio</th>
                       <th>Clave</th>
                       <th>Nombre</th>
-                      <th>PrecioUnitario</th>
+                      <th>Precio unitario</th>
+                      <th>Precio de oferta</th>
                     </tr>
                   </thead>
                   <tbody>
