--- a/chequeo.html
+++ b/chequeo.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link href='logo.ico' rel='shortcut icon' type='image/x-icon' />
-    <title>Venta diaria</title>
+    <title>Chequeo de precios</title>
     <link rel="stylesheet" type="text/css" href="css/jquery-ui.css">
     <link rel="stylesheet" href="css/bootstrap4.min.css">
     <link href="css/dataTables.bootstrap4.min.css" rel="stylesheet">
@@ -70,12 +70,12 @@
     <div id="app" class="container-fluid">
         <div class="row mt-4">
             <div class="col-lg-12 col-md-12 col-sm-12">
-                <h3 class="display-5">Detalles de la venta diaria</h3>
+                <h3 class="display-5">Detalles del chequeo de precios</h3>
             </div>
         </div>
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="ventasDiarias.html"><i class="fas fa-chevron-left"></i> Regresar a ventas diarias</a></li>
+                <li class="breadcrumb-item"><a href="chequeos.html"><i class="fas fa-chevron-left"></i> Regresar a lista de chequeos</a></li>
                 <!-- <li class="breadcrumb-item active" aria-current="page">Detalles de la existencia</li> -->
             </ol>
         </nav>
@@ -86,15 +86,8 @@
                         <div class="row">
                             <div class="col" style="line-height: 10px;">
                                 <p class="lead">Consorcio: <span style="font-weight: bold;" id="consorcio"></span></p>
-                                <p class="lead">Fecha: <span style="font-weight: bold;" id="fecha"></span></p>
-                                <p class="lead">Promotora: <span style="font-weight: bold;" id="promotora"></span></p>
-                                <p class="lead">Nº promotora: <span style="font-weight: bold;" id="idPromotora"></span></p>
-                                <p class="lead">Tienda: <span style="font-weight: bold;" id="tienda"></span></p>
+                                <p class="lead">Fecha captura: <span style="font-weight: bold;" id="fechaCaptura"></span></p>
                                 <p class="lead">Zona: <span style="font-weight: bold;" id="zona"></span></p>
-                            </div>
-                            <div class="col" style="line-height: 10px;">
-                                <p class="lead">Total de kilos: <span class="badge badge-danger" style="font-weight: bold;" id="totalKilos"></span></p>
-                                <p class="lead">Total de pesos: <span class="badge badge-danger" style="font-weight: bold;" id="totalPesos"></span></p>
                             </div>
                             <div class="col">
                                 <button type="button" onclick="exportarCSV()" class="btn btn-success my-2 my-sm-0">
@@ -109,8 +102,8 @@
                                     <tr>
                                         <th>Clave</th>
                                         <th>Nombre</th>
-                                        <th>Kilos</th>
-                                        <th>Pesos</th>
+                                        <th>Precio regular</th>
+                                        <th>Precio sugerido</th>
                                         <th>Editar</th>
                                     </tr>
                                 </thead>
@@ -125,16 +118,22 @@
         </div>
     </div>
     <div class="modal" id="modalEditar" tabindex="-1" role="dialog">
-        <div class="modal-dialog" role="document">
+        <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Editar producto de venta diaria</h5>
+                    <h5 class="modal-title">Editar producto de chequeo</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
                 </div>
                 <div class="modal-body">
                     <div class="row">
+                        <div class="col">
+                            <div class="form-group">
+                                <label for="claveProducto">Clave del producto:</label>
+                                <input type="text" id="claveProducto" readonly class="form-control">
+                            </div>
+                        </div>
                         <div class="col">
                             <div class="form-group">
                                 <label for="nombreProducto">Nombre del producto:</label>
@@ -145,38 +144,29 @@
                     <div class="row">
                         <div class="col">
                             <div class="form-group">
-                                <label for="kilos">Kilos:</label>
-                                <div class="input-group">
-                                    <input type="number" id="kilos" class="form-control">
-                                    <span style="display: none;" id="helpblockKilos" class="help-block">Campo obligatorio</span>
-                                    <div class="input-group-append">
-                                        <span class="input-group-text" id="basic-addon1">kg</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col">
-                            <div class="form-group">
-                                <input type="hidden" id="precio" class="form-control">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col">
-                            <div class="form-group">
-                                <label for="pesos">Pesos:</label>
+                                <label for="precioRegular">Precio regular:</label>
                                 <div class="input-group">
                                     <div class="input-group-prepend">
-                                        <span class="input-group-text" id="basic-addon1">$</span>
+                                        <div class="input-group-text">$</div>
                                     </div>
-                                    <input readonly type="number" id="pesos" class="form-control">
-                                    <span style="display: none;" id="helpblockPesos" class="help-block">Campo obligatorio</span>
+                                    <input type="number" id="precioRegular" name="precioRegular" class="form-control">
+                                    <span style="display: none;" id="helpblockPrecioRegular" class="help-block">Campo obligatorio</span>
                                 </div>
                             </div>
                         </div>
-                    </div>
+                        <div class="col">
+                            <div class="form-group">
+                                <label for="precioSugerido">Precio sugerido:</label>
+                                <div class="input-group">
+                                    <div class="input-group-prepend">
+                                        <div class="input-group-text">$</div>
+                                    </div>
+                                    <input type="number" id="precioSugerido" name="precioSugerido" class="form-control">
+                                    <span style="display: none;" id="helpblockPrecioSugerido" class="help-block">Campo obligatorio</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>    
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
@@ -236,7 +226,7 @@
     <script src="js/Chart.min.js"></script>
     <script src='js/decimal.min.js'></script>
     <script src="https://unpkg.com/sweetalert2@7.20.10/dist/sweetalert2.all.js"></script>
-    <script src="babel/ventaDiaria.js"></script>
+    <script src="babel/chequeo.js"></script>
 </body>
 
 </html>
